2007-10-24  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* data/torlib.[h,txt]: New torsional library data, improving conformer
        searching.

	* tools/obconformer.cpp: New tool to do real conformer searching,
	using new random and Monte Carlo searching mechanisms in OBForceField.
	
	* tools/Makefile.*: Add above.

	* include/openbabel/forcefield.h, src/forcefield.cpp: Add geometry
	optimization steps to SystematicRotorSearch and new method
	RandomRotorSearch.

2007-10-22  Chris Morley

	Implement exact fastsearch option.
	* src/transform.cpp:Add test for same number of heavy atoms if the
	internal exactmatch option set.

	* src/format/fastsearchformat.cpp: Split out ObtainTarget() to
	make code less cumbersome. Add -ae option implementation.
	
2007-10-18  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/Makefile.am: The dl Python module is not present on (many?)
	64-bit systems, so it falls back to the DLFCN module which hopefully
	*is* present. I would appreciate if someone could rerun the toolchain
	and check in Makefile.in.

2007-10-15  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/forcefield.h: New LineSearch() method to
	update a step over the entire molecule's coordinates at once. Much
	faster, since it drastically minimizes the number of energy
	evaluations.

	* src/forcefield.cpp: Implement above, plus switch SteepestDescent
	and ConjugateGradients to use it.

	* include/openbabel/mol.h, src/mol.cpp: Add SetCoordinates() call
	to set the entire coordinate system at once.

2007-10-15  Chris Morley
	
	* src/babel.cpp, src/nbabel.cpp: The last commit gave incorrect
	error messages. Correct this, add Read or Write only to output
	from Hxxx and make both Hxxx and H xxx acceptable.

2007-10-15  Chris Morley
	
	* src/babel.cpp, src/nbabel.cpp: Abort and error message when
	SetInAndOutFormats fails. Fixes bug #1813493
	
2007-10-14  Chris Morley

	* src/fingerprints/finger3.cpp, src/formats/fingerprintformat.cpp