@@ -327,14 +327,16 @@ namespace OpenBabel
     /* residue sequence number */
     string resnum = sbuf.substr(16,4);
     int        rnum = atoi(resnum.c_str());
+    cerr << " Residue: " << resname << " " << rnum << endl;
     OBResidue *res  = (mol.NumResidues() > 0) ? mol.GetResidue(mol.NumResidues()-1) : NULL;
-    if (res == NULL || res->GetName() != resname || static_cast<int>(res->GetNum())
-        != rnum)
+    if (res == NULL || res->GetName() != resname 
+        || static_cast<int>(res->GetNum()) != rnum)
       {
         vector<OBResidue*>::iterator ri;
         for (res = mol.BeginResidue(ri) ; res ; res = mol.NextResidue(ri))
-          if (res->GetName() == resname && static_cast<int>(res->GetNum())
-              == rnum)
+          if (res->GetName() == resname 
+              && static_cast<int>(res->GetNum()) == rnum
+              && static_cast<int>(res->GetChainNum()) == chainNum)
             break;
 
         if (res == NULL)
